/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package io.kaleido.paladin.toolkit;

message OnChainEventLocation {
  string transaction_hash = 1; // The on-chain ethereum hash of the blockchain transaction
  int64 block_number = 2; // The block number of the transaction
  int64 transaction_index = 3; // The index of the transaction within the block
  int64 log_index = 4; // The index of the log of the event that completed the transaction
}

message OnChainEvent {
  OnChainEventLocation location = 1; // the event locator information on the blockchain
  string signature = 2; // 32 byte hex signature
  string solidity_signature = 3; // The friendly solidity signature to match against
  string data_json = 4; // The parsed event data
}
